src/app/ui/popup/popup.module.css
.container {
  position: relative;
}

.container .popup {
  background-color: whitesmoke;
  position: absolute;
  opacity: 0;
  transition: opacity 0.3s ease-in-out;
  box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 7px;
  border-radius: 5px;
  color: var(--dark-purple);
  font-weight: 600;
  padding: 5px;
  width: fit-content;
  white-space: nowrap;
  z-index: 10;
  top: 0%;
  left: 100%;
}

.container:hover .popup {
  opacity: 1;
}

@media (max-width: 300px) {
  .container .popup {
    left: 0%;
    top: -100%;
  }
}

